# Cell_Simulation

./: Cargo.toml  README.md
assets/shaders/: cell.wgsl
src/: color_method.rs  main.rs  neighbours.rs  renderer.rs  rules.rs  utils.rs
src/simulation/: atomic.rs  mod.rs  settings.rs  sims.rs
