[package]
name = "Cell_Simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bytemuck = { version = "1.13.0", features = ["derive"] }
bevy_egui = "0.12.1"
bevy_fly_camera = "0.8.0"
rand = "*"
futures-lite = "1.12.0"

[profile.release]
debug = 1