[package]
name = "Cell_Simulation"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_egui = "0.19"
bevy_fly_camera = "0.10.0"
bytemuck = "*"
rand = "*"
futures-lite = "1.12.0"

[profile.release]
debug = 1
